--- a/package.json
+++ b/package.json
@@ -4,14 +4,15 @@
   "description": "",
   "main": "index.html",
   "scripts": {
-    "start": "parcel index.html --open",
+    "start": "parcel index.html",
+    "open": "parcel index.html --open",
     "build": "parcel build index.html"
   },
   "dependencies": {
     "parcel-bundler": "^1.6.1"
   },
   "devDependencies": {
-    "typescript": "4.2.3"
+    "typescript": "4.2.4"
   },
   "resolutions": {
     "@babel/preset-env": "7.13.8"
