--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "parcel index.html",
     "open": "parcel index.html --open",
-    "build": "parcel build index.html"
+    "build": "parcel build index.html --no-source-maps --no-cache --public-url ."
   },
   "dependencies": {
     "parcel-bundler": "^1.6.1"
