--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,9 +4,9 @@
         "es2021": true
     },
     "extends": [
+        "eslint:recommended",
         "plugin:@typescript-eslint/recommended",
-        "plugin:@typescript-eslint/eslint-recommended",
-        "eslint:recommended"
+        "plugin:@typescript-eslint/eslint-recommended"
     ],
     "parser": "@typescript-eslint/parser",
     "parserOptions": {
@@ -17,5 +17,6 @@
         "@typescript-eslint"
     ],
     "rules": {
+        "@typescript-eslint/no-parameter-properties": 2
     }
 }
